@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/gnump3d
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnump3d/ChangeLog,v 1.63 2008/01/17 18:58:41 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnump3d/ChangeLog,v 1.64 2008/06/03 14:52:32 beandog Exp $
+
+  03 Jun 2008; Steve Dibb <beandog@gentoo.org> files/gnump3d.init.d:
+  Add index option to init script, bug 204418
 
   17 Jan 2008; Fabian Groffen <grobian@gentoo.org> gnump3d-2.9_pre7.ebuild,
   gnump3d-2.9_pre99.ebuild:
